force-app/main/default/objects/Return__c/Return__c.object-meta.xml
<CustomObject>
    <label>본사반품</label>
    <nameField>
        <label>Return No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>