force-app/main/default/objects/Return__c/fields/ConfirmNetAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmNetAmount__c</fullName>
    <label>Confirm Net Amount</label>
    <summarizedField>ReturnLineItem__c.ConfirmNetAmount__c</summarizedField>
    <summaryForeignKey>ReturnLineItem__c.ReturnNo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>