force-app/main/default/objects/Return__c/fields/ConfirmReturn__c.field-meta.xml
<CustomField>
    <fullName>ConfirmReturn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirm Return</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Return1</relationshipName>
    <type>Lookup</type>
</CustomField>