force-app/main/default/objects/Return__c/fields/ConfirmReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmReturnDate__c</fullName>
    <label>Confirm Return Date</label>
    <type>Date</type>
</CustomField>