force-app/main/default/objects/Return__c/fields/ConfirmTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmTaxAmount__c</fullName>
    <label>Confirm Tax Amount</label>
    <summarizedField>ReturnLineItem__c.ConfirmTaxAmount__c</summarizedField>
    <summaryForeignKey>ReturnLineItem__c.ReturnNo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>