force-app/main/default/objects/Return__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <label>Net Amount</label>
    <summarizedField>ReturnLineItem__c.NetAmount__c</summarizedField>
    <summaryForeignKey>ReturnLineItem__c.ReturnNo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>