force-app/main/default/objects/Return__c/fields/PurchaseVendor__c.field-meta.xml
<CustomField>
    <fullName>PurchaseVendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Vendor</label>
    <referenceTo>VendorPurchase__c</referenceTo>
    <relationshipName>Return</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>