force-app/main/default/objects/Return__c/fields/RegistorHp__c.field-meta.xml
<CustomField>
    <fullName>RegistorHp__c</fullName>
    <label>Registor Hp</label>
    <type>Phone</type>
</CustomField>