force-app/main/default/objects/Return__c/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <label>Return Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>