force-app/main/default/objects/Return__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>Tax Amount</label>
    <summarizedField>ReturnLineItem__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>ReturnLineItem__c.ReturnNo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>